# ZS-KAN

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
scripts/: download_kodak24.sh
src/zskan_denoising/: __init__.py
src/zskan_denoising/cli/: main.py
src/zskan_denoising/cli/commands/: __init__.py  analyze_noise.py  denoise_single.py  evaluate_dataset.py
src/zskan_denoising/core/: __init__.py
src/zskan_denoising/engine/: __init__.py  pipelines.py  training.py
src/zskan_denoising/experimental/: __init__.py
src/zskan_denoising/experimental/diffusion/: Scheduler.py  Train.py  __init__.py
src/zskan_denoising/layers/: __init__.py
src/zskan_denoising/layers/kan_conv_v1/: KANConv.py  KANLinear.py
src/zskan_denoising/layers/kan_conv_v2/: KANConv.py  __init__.py  convolution.py
src/zskan_denoising/metrics/: __init__.py  quality.py
src/zskan_denoising/models/: __init__.py  zs_models.py
src/zskan_denoising/utils/: __init__.py  image_io.py  noise.py
tests/: test_cli_parse.py  test_cli_smoke.py  test_metrics.py  test_models_shape.py  test_noise_ops.py
